Fix headings spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -219,6 +219,8 @@
 
     h2 {
         font-size: 32px;
+		margin-top: 30px;
+		margin-bottom: 5px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
